--- a/parallax-showcase/package.json
+++ b/parallax-showcase/package.json
@@ -13,9 +13,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-scroll-parallax": "^3.4.5",
     "zod": "^4.1.5"
   },
   "devDependencies": {
